--- a/app/src/app.html
+++ b/app/src/app.html
@@ -1,11 +1,25 @@
 <!doctype html>
-<html lang="%paraglide.lang%">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %sveltekit.head%
-  </head>
-  <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
-  </body>
+<html lang="ja">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		%sveltekit.head%
+		<script>
+			// GitHub Pages SPA routing fix
+			(function(l) {
+				if (l.search[1] === '/' ) {
+					var decoded = l.search.slice(1).split('&').map(function(s) { 
+						return s.replace(/~and~/g, '&')
+					}).join('?');
+					window.history.replaceState(null, null,
+						l.pathname.slice(0, -1) + decoded + l.hash
+					);
+				}
+			}(window.location))
+		</script>
+	</head>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
